src/App.css
/* ... */
.action-btn-circle.view {
  color: #1fc8db;
}

.action-btn-circle.view:hover {
  background: #1fc8db;
  color: #fff;
  border-color: #1fc8db;
  transform: translateY(-2px);
  box-shadow: 0 4px 12px rgba(31, 200, 219, 0.3);
}

.action-btn-circle.remove {
  color: #ff4d4d;
}

.action-btn-circle.remove:hover {
  background: #ff4d4d;
  color: #fff;
  border-color: #ff4d4d;
  transform: translateY(-2px);
  box-shadow: 0 4px 12px rgba(255, 77, 77, 0.3);
}



.calendar-cell {
  overflow: hidden;
  position: relative;
}

/* Mobile view fix */
@media (max-width: 768px) {
  .calendar-cell {
    flex: 0 0 100% !important;   /* full width */
    min-height: auto;
    border-right: none !important;
  }

  .calendar-cell span {
    font-size: 14px;
  }
}

/* Tablet view */
@media (max-width: 1024px) {
  .calendar-cell {
    flex: 0 0 50% !important;  /* 2 columns */
  }
  .calendarHeading {
      display: none !important;
  }
}

